# atis.rs

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: event.rs  main.rs  utils.rs
src/commands/: custom.rs  dev.rs  fun.rs  git.rs  packwiz.rs
src/commands/packwiz/: bulkinstall.rs  help.rs  install.rs  rawdog.rs
