[package]
name = "atis"
authors = ["Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"
sled = "0.34.7"
poise = "0.6.1"
anyhow = "1.0.82"
chrono = "0.4.38"
censor = "0.3.0"
fastrand = "2.1.0"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
version = "0.12.1"
